--- a/eTicketMVC/eTicketMVC/Views/Movies/Index.cshtml
+++ b/eTicketMVC/eTicketMVC/Views/Movies/Index.cshtml
@@ -22,7 +22,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="@movie.ImageURL" width="100%" alt="@movie.Name"/>
+                        <img src="@movie.ImageURL" width="100%" height="400px" alt="@movie.Name"/>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
