--- a/eTicketMVC/eTicketMVC/Views/Producers/Index.cshtml
+++ b/eTicketMVC/eTicketMVC/Views/Producers/Index.cshtml
@@ -23,19 +23,23 @@
                         <img class="rounded-circle" src="@producer.ProfilePictureURL" alt="@producer.FullName" style="max-width:150px" />
                     </td>
                     <td class="align-middle">
-                        @Html.DisplayNameFor(modelItem => producer.FullName)
+                        @Html.DisplayFor(modelItem => producer.FullName)
                     </td>
                     <td class="align-middle">
-                        @Html.DisplayNameFor(modelItem => producer.Bio)
+                        @Html.DisplayFor(modelItem => producer.Bio)
                     </td>
                     <td class="align-middle">
-                        <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit</a> |
-                        <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Details</a> |
-                        <a class="btn btn-danger text-white"><i class="bi bi-trash"></i>Delete</a>
+                        <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@producer.Id"><i class="bi bi-pencil-square"></i>Edit</a> |
+                        <a class="btn btn-outline-info" asp-action="Details" asp-route-id="@producer.Id"><i class="bi bi-eye"></i>Details</a> |
+                        <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@producer.Id"><i class="bi bi-trash"></i>Delete</a>
                     </td>
                 </tr>
                 }
             </tbody>
         </table>
     </div>
+</div>
+
+<div style="position:fixed;right:25px;bottom:25px;" class="text-white">
+    <a asp-controller="Producers" asp-action="Create" class="btn btn-success"><i class="bi bi-plus-circle"></i>Add New</a>
 </div>
