--- a/eTicketMVC/eTicketMVC/Views/Cinemas/Details.cshtml
+++ b/eTicketMVC/eTicketMVC/Views/Cinemas/Details.cshtml
@@ -1,13 +1,13 @@
-﻿@model Actor
+﻿@model Cinema
 
 @{
-    ViewData["Title"] = "Details of the Actor";
+    ViewData["Title"] = "Details of the Cinema";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Details for @Model.FullName</h1>
+            <h1>Details for @Model.Name</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
@@ -15,19 +15,19 @@
                         <img class="border-info rounded-circle" style="max-width:150px;" id="LogoPreview" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="ProfilePictureURL" class="control-label"></label>
-                        <input asp-for="ProfilePictureURL" class="form-control" readonly/>
-                        <span asp-validation-for="ProfilePictureURL" class="text-danger"></span>
+                        <label asp-for="Logo" class="control-label"></label>
+                        <input asp-for="Logo" class="form-control" readonly/>
+                        <span asp-validation-for="Logo" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="FullName" class="control-label"></label>
-                        <input asp-for="FullName" class="form-control" readonly />
-                        <span asp-validation-for="FullName" class="text-danger"></span>
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" readonly />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Bio" class="control-label"></label>
-                        <input asp-for="Bio" class="form-control" readonly />
-                        <span asp-validation-for="Bio" class="text-danger"></span>
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" readonly />
+                        <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <a class="btn btn-outline-success float-right" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
