--- a/eTicketMVC/eTicketMVC/Views/Cinemas/Index.cshtml
+++ b/eTicketMVC/eTicketMVC/Views/Cinemas/Index.cshtml
@@ -23,19 +23,22 @@
                         <img class="rounded-circle" src="@cinema.Logo" alt="@cinema.Name" style="max-width:150px" />
                     </td>
                     <td class="align-middle">
-                        @Html.DisplayNameFor(modelItem => cinema.Name)
+                        @Html.DisplayFor(modelItem => cinema.Name)
                     </td>
                     <td class="align-middle">
-                        @Html.DisplayNameFor(modelItem => cinema.Description)
+                        @Html.DisplayFor(modelItem => cinema.Description)
                     </td>
                     <td class="align-middle">
-                        <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit</a> |
-                        <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Details</a> |
-                        <a class="btn btn-danger text-white"><i class="bi bi-trash"></i>Delete</a>
+                        <a class="btn btn-outline-primary" asp-controller="Cinemas" asp-action="Edit" asp-route-id="@cinema.Id"><i class="bi bi-pencil-square"></i>Edit</a> |
+                        <a class="btn btn-outline-info" asp-controller="Cinemas" asp-action="Details" asp-route-id="@cinema.Id"><i class="bi bi-eye"></i>Details</a> |
+                        <a class="btn btn-danger text-white" asp-controller="Cinemas" asp-action="Delete" asp-route-id="@cinema.Id"><i class="bi bi-trash"></i>Delete</a>
                     </td>
                 </tr>
                 }
             </tbody>
         </table>
     </div>
+</div>
+<div style="position:fixed;right:25px;bottom:25px;" class="text-white">
+    <a asp-controller="Cinemas" asp-action="Create" class="btn btn-success"><i class="bi bi-plus-circle"></i>Add New</a>
 </div>
